# cxx-image

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md
cmake/: CXXImageConfig.cmake.in
cmake/modules/: FindEXIF.cmake  FindJPEGXL.cmake  FindTurboJPEG.cmake
doc/: Doxyfile
lib/: CMakeLists.txt
lib/image/: CMakeLists.txt  README.md
lib/image/include/cxximg/image/: Allocation.h  Image.h  ImageDescriptor.h  Interpolator.h  LayoutDescriptor.h
lib/image/include/cxximg/image/detail/: Alignment.h
lib/image/include/cxximg/image/detail/expression/: BinaryExpression.h  BorderExpression.h  ConvolveExpression.h  IfExpression.h  ResizeExpression.h  ShiftExpression.h  UnaryExpression.h
lib/image/include/cxximg/image/detail/memory/: Allocator.h  AllocatorManager.h  RecyclingAllocator.h  StandardAllocator.h
lib/image/include/cxximg/image/detail/operator/: BinaryOperators.h  UnaryOperators.h
lib/image/include/cxximg/image/expression/: BaseExpression.h  Evaluate.h  Expression.h  Expressions.h  View.h
lib/image/include/cxximg/image/function/: Border.h  BorderMode.h  Conversion.h
lib/image/include/cxximg/image/view/: BayerView.h  ImageView.h  PixelView.h  PlaneView.h
lib/image/include/image/: Image.h  ImageDescriptor.h  ImageLayout.h  Interpolator.h  LayoutDescriptor.h  PixelType.h  Roi.h
lib/image/include/image/detail/: Alignment.h
lib/image/include/image/detail/expression/: BinaryExpression.h  BorderExpression.h  ConvolveExpression.h  IfExpression.h  ResizeExpression.h  ShiftExpression.h  UnaryExpression.h
lib/image/include/image/detail/operator/: BinaryOperators.h  UnaryOperators.h
lib/image/include/image/expression/: BaseExpression.h  Evaluate.h  Expressions.h  View.h
lib/image/include/image/function/: Border.h  Conversion.h
lib/image/include/image/view/: BayerView.h  ImageView.h  PixelView.h  PlaneView.h
lib/image/src/: Image.cpp  ImageAllocator.cpp  ImageView.cpp  PlaneView.cpp
lib/image/test/: AllocatorTest.cpp  BorderTest.cpp  ImageTest.cpp  LayoutTest.cpp  PlaneViewTest.cpp  ResizeExpressionTest.cpp
lib/io/: CMakeLists.txt  README.md
lib/io/include/cxximg/io/: Exceptions.h  ImageIO.h  ImageReader.h  ImageWriter.h  LensfunDatabase.h
lib/io/include/io/: Exceptions.h  ImageIO.h  ImageReader.h  ImageWriter.h
lib/io/src/: Alignment.h  BmpIO.cpp  BmpIO.h  CfaIO.cpp  CfaIO.h  DngIO.cpp  DngIO.h  Exif.h  ImageIO.cpp  JpegIO.cpp  JpegIO.h  JpegXLIO.cpp  JpegXLIO.h  LensfunDatabase.cpp  MipiRawIO.cpp  MipiRawIO.h  PlainIO.cpp  PlainIO.h  PngIO.cpp  PngIO.h  RawlerIO.cpp  RawlerIO.h  TiffIO.cpp  TiffIO.h
lib/math/: CMakeLists.txt
lib/math/include/cxximg/math/: Bezier.h  ColorSpace.h  Curve.h  DynamicMatrix.h  Histogram.h  Lut.h  Matrix.h  Pixel.h  Point.h  Rect.h  half.h  math.h
lib/math/include/math/: Bezier.h  ColorSpace.h  Curve.h  Histogram.h  Lut.h  Matrix.h  Pixel.h  Point.h  Rect.h  half.h  math.h
lib/math/test/: HistogramTest.cpp
lib/model/: CMakeLists.txt
lib/model/include/cxximg/model/: ExifMetadata.h  FileInfo.h  ImageLayout.h  ImageMetadata.h  PixelType.h
lib/model/include/model/: ExifMetadata.h  ImageMetadata.h
lib/parser/: CMakeLists.txt  README.md
lib/parser/include/cxximg/parser/: Exceptions.h  MetadataParser.h
lib/parser/include/parser/: MetadataParser.h
lib/parser/src/: ImageReaderWriter.h  JsonDto.h  MetadataDto.h  MetadataParser.cpp
lib/parser/test/: MetadataParserTest.cpp
lib/util/: CMakeLists.txt  revision.h.in
lib/util/include/cxximg/util/: File.h  MemoryStream.h  Version.h  compiler.h
lib/util/include/util/: File.h  MemoryStream.h  Version.h  compiler.h
lib/util/src/: Version.cpp
tool/: CMakeLists.txt
tool/convert-image/: CMakeLists.txt
tool/convert-image/src/: main.cpp
